# cmake-test

./: .gitignore  CMakeLists.txt  README.md  build.cmd  build.sh
.devcontainer/: Dockerfile  devcontainer.json  patch.sh  post-create.sh
.github/workflows/: build-test.yml  foobar.yml
app/: CMakeLists.txt
foo/: CMakeLists.txt
foo/include/foo/: dllexport.h  mul.h
foo/tests/: CMakeLists.txt  mulTests.cpp  testMul.cpp
libfoo/: CMakeLists.txt
libfoo/src/: mul.cpp
libfoo/tests/: testMul.cpp
